    Icoon van de stappen wordt afgekapt: uncomment de lijn met <li class="step-0"> - is dan uniform met registratie

18. Stappen nu ook met pijltjes op desktop/tablet - idem als smartphone; positionering TBD! Stylesheet aangepast.

19. Uitleenhistoriek witruimte onderaan
    TODO

20. Detail link
    TODO (combinatie met javascript)

21. Verwijder lidmaatschap - TODO

22. Voeg lidmaatschap toe - TODO

23. "Te laat": geen link
    Zie bibliotheek-2.html - regel 113. <span class="late red"> ipv <a href="...">. Stylesheet aangepast.
    
24. Kleur boodschap aanpassen: <div class="message info"> ipv <div class="message error">.
    Openklapbare tekst - TODO

25. TODO (snap het niet)

26. "Ga naar uitleningen en reserveringen" -> tekst aanpassen naar "Ga naar uitleningen", dan wel 1 regel.

27. "Voorwaarden" pagina
    Zie voorwaarden.html in git repository. <div class="grid-md-6 alpha omega"> mag weg. Stylesheet aangepast voor 
    achtergrondkleur.

28. TODO

29. Stappen bovenaan? Was dat niet nog TBD

30. TODO (snap het niet)

31. TODO (snap het niet)

----------------------------------------------------------------

24.06

- footer: HTML in bibliotheek-2.html en stylesheet aangepast
- stappen bovenaan de pagina: stylesheet aangepast; zie registreer-2.html regel 27-36. Regels 232-235 mogen weg.
- bibliotheek-pagina: link naar contact, bibliotheek staat nu bovenaan onder titel - zie bibliotheek-2.html - regel 40-49. Regels 99-103 mogen weg.
- mijn bibliotheken-pagina: "verwijder dit lidmaatschap": <a class="link red" /> ipv <a class="red" />. Stylesheet aangepast.
- mijn bibliotheken-pagina: blauwe achtergrond op desktop & mobile: <div class="message info no-bg" /> ipv <div class="message info" />. Stylesheet aangepast.
- informatietext op aanmeldpagina: zie aanmelden-1.html. Er zijn wat divs bijgekomen (met class resp-false en resp-true). Javascript bibnet.js is aangepast. Stylesheet is aangepast.